fixed account tab-switcher overflow

--- a/client/src/css/components/tab-switcher.css
+++ b/client/src/css/components/tab-switcher.css
@@ -54,4 +54,6 @@
   background-color: rgb(41, 42, 44);
   height: auto;
   min-height: 300px;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
