--- a/client/src/css/general.css
+++ b/client/src/css/general.css
@@ -1,3 +1,6 @@
+html {
+  height: auto;
+}
 body {
   margin: 0;
   font-family: "Roboto Regular";
